# HARP

./:  (Debian_tom's conflicted copy 2014-05-29).project  .gitignore  1  ConfigClass.py  Dockerfile  ErrorMessage.py  ErrorMessage.ui  Get_Parameters.py  HARP.bat  HARP_user_guide.chm  HARP_user_guide.docx  HARP_v2.0_user_guide.docx  Main.py  MainWindow.py  MainWindow.ui  OLDparameters.py  Pipfile  Progress.py  Progress.ui  README.md  RunProcessing.py  Run_processing.py  Run_processing_threaded.py  Work_Thread_Get_Dimensions.py  Work_Thread_Run_Processing.py  addtolist.py  appdata.py  autocrop.py  autocrop_fast_threaded.py  autofill.py  autofill.py~  batch.py  config.py  crop.py  cropper  darkorange.stylesheet  default.tif  errorcheck.py  fix_broken_recons.py  getdimensions.py  (+35 more)
ImageJ/: README.html
docs/: Makefile  autocrop.rst  autocrop_fast_threaded.rst  autofill.rst  conf.py  getdimensions.rst  getpickle.rst  harp.rst  index.rst  make.bat  modules.rst  startpro.rst  vtkRenderAnimation.rst
harp/: README.md  appdata.py  autofill.py  batch.py  config.py  errorcheck.py  getpickle.py  manualcrop.py  processing.py  queuejob.py  run_harp.py  setup_HARP.py  test_recon_E14.5.done  version.py
harp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
testing/ResampleImageFilter/: CMakeCache.txt  CMakeLists.txt  Makefile  ResampleImageFilter  ResampleImageFilter.cxx  cmake_install.cmake  compile_commands.json
testing/ResampleImageFilter/nbproject/: configurations.xml  project.xml
testing/ResampleImageFilter/nbproject/private/: Default.properties  configurations.xml
(+191 files in other folders)
